added properties, logger and fixed defects

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,6 @@
-errorMessage = Not a number
-errorStockMessage = Out of stock
-errorNegativeNumberMessage = Enter positive number
+messages.error.message = Not a number
+messages.error.stock.message = Out of stock
+messages.error.negative.number.message = Enter positive number
+messages.error.required.field = Field should not be empty
+messages.error.formatting.date = Not correct date format
+messages.error.no.such.payment.method = There isn't such payment method
